employee details update and basic layout style changes.

--- a/src/app/Components/employee-details/employee-details.component.css
+++ b/src/app/Components/employee-details/employee-details.component.css
@@ -7,3 +7,9 @@
   .full-width {
     width: 100%;
   } */
+
+
+  .docs-component-viewer-content {
+    position: relative;
+    min-height: 500px;
+  }
