--- a/src/app/Components/Shared/menulist/menulist.component.html
+++ b/src/app/Components/Shared/menulist/menulist.component.html
@@ -2,9 +2,9 @@
   <span *ngFor="let item of navItems">
     <!-- Handle branch node buttons here -->
     <span *ngIf="item.children && item.children.length > 0">
-      <button mat-raised-button color="primary" [matMenuTriggerFor]="menu.childMenu">
+      <button mat-button color="primary" [matMenuTriggerFor]="menu.childMenu">
         {{item.displayName}} 
-        <mat-icon>expand_more</mat-icon>
+        <!-- <mat-icon>expand_more</mat-icon> -->
       </button>
       <app-menuitem #menu [items]="item.children"></app-menuitem>
     </span>
