--- a/src/app/Components/employee-details/employee-details.component.html
+++ b/src/app/Components/employee-details/employee-details.component.html
@@ -1,4 +1,9 @@
-<div style="padding-top:5%;" class="docs-component-viewer-content">
+<mat-toolbar id="actionBar">
+        <span id="actionBarTitle">
+            Employee Details
+        </span>
+      </mat-toolbar>
+<div class="docs-component-viewer-content">
 <div>Employee Id</div>
 <div>
 <mat-form-field >
