--- a/src/app/Components/employee/employee.component.html
+++ b/src/app/Components/employee/employee.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar id="actionBar">
+    <span id="actionBarTitle">
+        Employee
+    </span>
+  </mat-toolbar>
 <div class="example-container mat-elevation-z8">
     <table mat-table #table [dataSource]="dataSource">
   
