register,access denied,login pages

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,4 +7,6 @@
     </mat-form-field>
         <button mat-button (click)="Login()">Login</button>  
         <button mat-button (click)="Reset()">Reset</button>  
+        <a [routerLink]="['/register']">Register</a>
+        
 </form>
